fixed elo system
added elo system for all teams

--- a/aryan/elo_implementation.ipynb
+++ b/aryan/elo_implementation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,21 @@
       "\n",
       "Final Elo table:\n",
       "Team      Map    Elo\n",
+      "100T   Ascent 106.75\n",
+      "100T Fracture 110.62\n",
+      "100T    Haven  61.20\n",
+      "100T   Icebox  99.68\n",
+      "100T    Pearl  79.80\n",
+      "100T    Split 103.44\n",
+      "  2G   Ascent 110.85\n",
+      "  2G    Haven  83.79\n",
+      "  2G   Icebox  78.48\n",
+      "  2G    Lotus  93.78\n",
+      "  2G    Pearl  96.48\n",
+      "  AG Fracture 100.60\n",
+      "  AG    Lotus  87.63\n",
+      "  AG    Pearl  55.16\n",
+      "  AG    Split  95.40\n",
       " APK   Ascent  84.24\n",
       " APK    Haven  95.40\n",
       " APK    Lotus  68.41\n",
@@ -33,34 +48,141 @@
       " BBL   Icebox  95.15\n",
       " BBL    Lotus 111.19\n",
       " BBL    Pearl 110.63\n",
+      " BLG   Ascent 120.20\n",
+      " BLG Fracture 101.94\n",
+      " BLG    Haven  75.53\n",
+      " BLG   Icebox 107.35\n",
+      " BLG    Lotus 125.47\n",
+      " BLG    Pearl 123.26\n",
+      " BLG    Split  87.60\n",
+      " BME   Ascent  84.52\n",
+      " BME Fracture  85.01\n",
+      " BME    Haven 104.15\n",
+      " BME   Icebox 109.87\n",
+      " BME    Lotus 105.99\n",
+      " BME    Pearl 107.20\n",
+      " BME    Split  85.57\n",
+      "  C9   Ascent 109.49\n",
+      "  C9 Fracture 103.96\n",
+      "  C9    Haven 125.80\n",
+      "  C9   Icebox  77.61\n",
+      "  C9    Lotus  87.34\n",
+      "  C9    Pearl 110.78\n",
+      "  C9    Split 107.36\n",
+      " DFM   Ascent  77.95\n",
+      " DFM Fracture  63.39\n",
+      " DFM    Lotus  59.25\n",
+      " DFM    Pearl  95.40\n",
+      " DRG   Ascent  71.23\n",
+      " DRG Fracture 109.02\n",
+      " DRG    Haven 130.53\n",
+      " DRG   Icebox  72.00\n",
+      " DRG    Lotus  90.45\n",
+      " DRG    Split  96.03\n",
+      " DRX   Ascent 129.10\n",
+      " DRX Fracture 116.99\n",
+      " DRX    Haven 114.24\n",
+      " DRX   Icebox 105.41\n",
+      " DRX    Lotus 106.30\n",
+      " DRX    Split 112.93\n",
+      " EDG   Ascent  86.89\n",
+      " EDG Fracture 127.34\n",
+      " EDG    Haven 110.85\n",
+      " EDG   Icebox 108.46\n",
+      " EDG    Lotus 104.58\n",
+      " EDG    Split 100.94\n",
+      "  EG Fracture 109.04\n",
+      "  EG    Haven  67.96\n",
+      "  EG   Icebox 108.69\n",
+      "  EG    Lotus 141.47\n",
+      "  EG    Pearl 112.92\n",
+      "  EG    Split  91.67\n",
       " FNC   Ascent  92.80\n",
       " FNC Fracture 104.60\n",
       " FNC    Haven  96.04\n",
       " FNC    Lotus 135.50\n",
       " FNC    Split 121.57\n",
+      " FPX   Ascent  96.50\n",
+      " FPX Fracture  82.22\n",
+      " FPX    Haven  87.96\n",
+      " FPX   Icebox  89.65\n",
+      " FPX    Pearl 112.40\n",
+      " FPX    Split  85.00\n",
+      " FUR   Ascent  73.76\n",
+      " FUR   Icebox  90.57\n",
+      " FUR    Lotus  97.02\n",
+      " FUR    Pearl  61.19\n",
       " FUT   Ascent  95.40\n",
       " FUT Fracture 104.60\n",
       " FUT   Icebox  87.86\n",
       " FUT    Lotus  99.20\n",
       " FUT    Pearl 118.76\n",
       " FUT    Split  89.11\n",
+      "  G2   Ascent 125.44\n",
+      "  G2 Fracture  95.40\n",
+      "  G2    Haven 119.28\n",
+      "  G2   Icebox 112.22\n",
+      "  G2    Lotus 126.78\n",
+      "  G2    Pearl  95.40\n",
+      "  G2    Split 127.38\n",
+      "  GE   Ascent  83.30\n",
+      "  GE    Haven  75.45\n",
+      "  GE    Lotus  68.31\n",
+      "  GE    Pearl  87.63\n",
+      "  GE    Split  76.73\n",
+      " GEN   Ascent 116.22\n",
+      " GEN Fracture 115.85\n",
+      " GEN    Haven  93.79\n",
+      " GEN   Icebox 123.27\n",
+      " GEN    Lotus 126.18\n",
+      " GEN    Pearl 116.97\n",
+      " GEN    Split 108.70\n",
       "  GX   Ascent 112.38\n",
       "  GX Fracture 108.51\n",
       "  GX    Haven  74.60\n",
       "  GX    Lotus  93.95\n",
       "  GX    Pearl  85.00\n",
       "  GX    Split  97.40\n",
+      " JDG    Haven  91.41\n",
+      " JDG   Icebox 127.40\n",
+      " JDG    Lotus  76.53\n",
+      " JDG    Pearl  98.93\n",
+      " JDG    Split 104.60\n",
       "  KC    Haven 105.21\n",
       "  KC   Icebox 130.53\n",
       "  KC    Lotus  85.61\n",
       "  KC    Pearl 131.12\n",
       "  KC    Split  95.03\n",
+      " KRÜ   Ascent  82.40\n",
+      " KRÜ Fracture  87.09\n",
+      " KRÜ    Haven 128.00\n",
+      " KRÜ   Icebox 110.98\n",
+      " KRÜ    Lotus  81.61\n",
+      " KRÜ    Pearl  81.45\n",
+      " LEV   Ascent 104.03\n",
+      " LEV Fracture  97.18\n",
+      " LEV   Icebox  74.89\n",
+      " LEV    Lotus  98.45\n",
+      " LEV    Pearl 106.72\n",
+      " LEV    Split  77.64\n",
+      "LOUD Fracture 125.40\n",
+      "LOUD    Haven 105.38\n",
+      "LOUD   Icebox  95.40\n",
+      "LOUD    Lotus 105.63\n",
+      "LOUD    Pearl  92.65\n",
+      "LOUD    Split  92.80\n",
       "  M8 Fracture  95.40\n",
       "  M8    Haven  86.18\n",
       "  M8   Icebox  78.89\n",
       "  M8    Lotus  95.40\n",
       "  M8    Pearl  68.31\n",
       "  M8    Split  88.17\n",
+      "MIBR   Ascent  81.81\n",
+      "MIBR    Haven 121.47\n",
+      "MIBR   Icebox 156.48\n",
+      "MIBR    Lotus  84.64\n",
+      "MIBR    Pearl  93.51\n",
+      "MIBR    Split 111.08\n",
       "MKOI   Icebox 110.97\n",
       "MKOI    Lotus  70.59\n",
       "MKOI    Pearl  71.17\n",
@@ -71,6 +193,62 @@
       "NAVI    Lotus  86.21\n",
       "NAVI    Pearl  97.56\n",
       "NAVI    Split  79.80\n",
+      "NOVA   Ascent  72.91\n",
+      "NOVA Fracture  93.63\n",
+      "NOVA   Icebox  78.21\n",
+      "NOVA    Lotus  79.95\n",
+      "NOVA    Split  69.98\n",
+      " NRG   Ascent  89.56\n",
+      " NRG Fracture  71.31\n",
+      " NRG    Haven  76.66\n",
+      " NRG   Icebox  99.43\n",
+      " NRG    Lotus  76.45\n",
+      " NRG    Pearl 128.00\n",
+      "  NS   Ascent  79.80\n",
+      "  NS    Haven 112.80\n",
+      "  NS   Icebox  92.80\n",
+      "  NS    Lotus 115.94\n",
+      "  NS    Pearl 110.67\n",
+      "  NS    Split 126.97\n",
+      " PRX   Ascent 125.98\n",
+      " PRX Fracture 103.86\n",
+      " PRX    Haven  90.20\n",
+      " PRX   Icebox 107.20\n",
+      " PRX    Lotus 138.32\n",
+      " PRX    Pearl  92.80\n",
+      " PRX    Split 116.07\n",
+      " RRQ   Ascent  95.57\n",
+      " RRQ Fracture  96.25\n",
+      " RRQ    Haven 111.37\n",
+      " RRQ   Icebox 115.49\n",
+      " RRQ    Lotus 112.40\n",
+      " RRQ    Pearl  92.80\n",
+      " RRQ    Split 113.18\n",
+      " SEN   Ascent 115.91\n",
+      " SEN    Haven 110.46\n",
+      " SEN   Icebox  95.58\n",
+      " SEN    Lotus 106.83\n",
+      " SEN    Pearl 141.10\n",
+      " SEN    Split  88.62\n",
+      "  T1   Ascent  82.92\n",
+      "  T1 Fracture 140.41\n",
+      "  T1    Haven  90.66\n",
+      "  T1   Icebox  76.07\n",
+      "  T1    Lotus  95.66\n",
+      "  T1    Pearl 107.20\n",
+      "  T1    Split 102.09\n",
+      "  TE   Ascent  79.80\n",
+      "  TE Fracture  89.62\n",
+      "  TE    Haven 138.09\n",
+      "  TE    Lotus  86.14\n",
+      "  TE    Pearl  98.47\n",
+      "  TE    Split  92.79\n",
+      " TEC   Ascent 140.77\n",
+      " TEC Fracture 106.70\n",
+      " TEC    Haven  77.71\n",
+      " TEC   Icebox  90.36\n",
+      " TEC    Lotus 110.04\n",
+      " TEC    Split 133.09\n",
       "  TH   Ascent  79.80\n",
       "  TH    Haven 142.50\n",
       "  TH   Icebox 117.60\n",
@@ -82,11 +260,49 @@
       "  TL   Icebox  96.60\n",
       "  TL    Lotus 135.12\n",
       "  TL    Split 136.35\n",
+      " TLN   Ascent  90.38\n",
+      " TLN Fracture 121.23\n",
+      " TLN    Haven 136.30\n",
+      " TLN   Icebox  56.26\n",
+      " TLN    Lotus  81.68\n",
+      " TLN    Pearl  74.09\n",
+      " TLN    Split  88.91\n",
+      "  TS   Ascent 134.25\n",
+      "  TS Fracture  72.00\n",
+      "  TS    Haven  80.83\n",
+      "  TS   Icebox 106.44\n",
+      "  TS    Lotus  95.40\n",
+      "  TS    Pearl 109.23\n",
+      "  TS    Split  78.74\n",
+      " TYL Fracture  97.16\n",
+      " TYL    Haven  81.51\n",
+      " TYL   Icebox 129.09\n",
+      " TYL    Pearl  87.60\n",
+      " TYL    Split 107.17\n",
       " VIT   Ascent 130.78\n",
       " VIT    Haven  75.28\n",
       " VIT   Icebox  79.95\n",
       " VIT    Lotus 105.80\n",
-      " VIT    Split 115.74\n"
+      " VIT    Split 115.74\n",
+      " WOL Fracture  76.47\n",
+      " WOL    Haven  99.66\n",
+      " WOL   Icebox  99.74\n",
+      " WOL    Lotus 103.22\n",
+      " WOL    Pearl  94.86\n",
+      " WOL    Split 112.40\n",
+      " XLG   Ascent 131.69\n",
+      " XLG Fracture 115.31\n",
+      " XLG    Haven 106.75\n",
+      " XLG   Icebox  97.73\n",
+      " XLG    Lotus 135.99\n",
+      " XLG    Pearl 129.31\n",
+      " XLG    Split 115.00\n",
+      "ZETA Fracture  85.00\n",
+      "ZETA    Haven  90.20\n",
+      "ZETA   Icebox 107.20\n",
+      "ZETA    Lotus  94.58\n",
+      "ZETA    Pearl 106.01\n",
+      "ZETA    Split  90.10\n"
      ]
     }
    ],
@@ -100,7 +316,7 @@
     "DEFAULT_ELO = 100\n",
     "K_FACTOR    = 4\n",
     "MARGIN_SCALE = 1.3\n",
-    "DATA_PATH   = Path(\"emea.csv\")         # adjust if needed\n",
+    "DATA_PATH   = Path(\"../anthony/all_regions.csv\")         # adjust if needed\n",
     "\n",
     "# ── LOW-LEVEL HELPERS ───────────────────────────────────────────────────\n",
     "def expected(a: float, b: float) -> float:\n",
@@ -213,11 +429,11 @@
     "\n",
     "    # Elo of FNATIC on Ascent before Feb-15-2025\n",
     "    print(\"FNATIC Ascent elo on 2025-02-15:\",\n",
-    "          elo_hist.rating(\"FNATIC\", \"Ascent\", \"2025-02-15\"))\n",
+    "          elo_hist.rating(\"FNC\", \"Ascent\", \"2025-02-15\"))\n",
     "\n",
     "    # All map Elos for Team Liquid as of same date\n",
     "    print(\"\\nTEAM LIQUID map ratings (as of 2025-02-15):\")\n",
-    "    print(elo_hist.ratings(\"TEAM LIQUID\", \"2025-02-15\"))\n",
+    "    print(elo_hist.ratings(\"TL\", \"2025-02-15\"))\n",
     "\n",
     "    # Full table (latest snapshot)\n",
     "    print(\"\\nFinal Elo table:\")\n",
@@ -226,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Date': datetime.date(2025, 5, 15), 'TeamA': 'FNATIC', 'TeamB': 'TEAM LIQUID', 'ClassA': 'good', 'ClassB': 'good', 'BanA': 'Ascent', 'BanB': 'Fracture', 'PickA': 'Haven', 'PickB': 'Icebox'}\n"
+      "{'Date': datetime.date(2025, 5, 15), 'TeamA': 'FNC', 'TeamB': 'TL', 'ClassA': 'bad', 'ClassB': 'good', 'BanA': 'Icebox', 'BanB': 'Haven', 'PickA': 'Lotus', 'PickB': 'Split'}\n"
      ]
     }
    ],
@@ -334,20 +550,20 @@
     "    }\n",
     "\n",
     "# ── (4) EXAMPLE CALL  ───────────────────────────────────────────────────\n",
-    "result = simulate_map_selection(\"FNATIC\", \"TEAM LIQUID\", \"2025-05-15\")\n",
+    "result = simulate_map_selection(\"FNC\", \"TL\", \"2025-05-15\")\n",
     "print(result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expected rounds on Icebox (FNATIC vs TEAM LIQUID as of 2025-05-15): 22.47\n"
+      "Expected rounds on Icebox (FNC vs TL as of 2025-05-15): 22.10\n"
      ]
     }
    ],
@@ -419,16 +635,23 @@
     "\n",
     "# ── QUICK TEST ──────────────────────────────────────────────────────────\n",
     "if __name__ == \"__main__\":\n",
-    "    team1, team2, map_name, date = \"FNATIC\", \"TEAM LIQUID\", \"Icebox\", \"2025-05-15\"\n",
+    "    team1, team2, map_name, date = \"FNC\", \"TL\", \"Icebox\", \"2025-05-15\"\n",
     "    est_rounds = predict_map_length_by_date(team1, team2, map_name, date, sims=8000)\n",
     "    print(f\"Expected rounds on {map_name} ({team1} vs {team2} as of {date}): \"\n",
     "          f\"{est_rounds:.2f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -442,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
