--- a/anthony/valorant_modeling.ipynb
+++ b/anthony/valorant_modeling.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "id": "ab333d40",
    "metadata": {},
    "outputs": [],
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "id": "61039330",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
        "4  https://www.vlr.gg/459826/team-vitality-vs-gia...   EMEA  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "id": "b1b028ac",
    "metadata": {},
    "outputs": [
@@ -743,7 +743,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3g/fzqltvr90_11xv3v1sxb4f2m0000gn/T/ipykernel_40474/1975378772.py:43: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/3g/fzqltvr90_11xv3v1sxb4f2m0000gn/T/ipykernel_47325/1975378772.py:43: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "id": "ecf32e0a",
    "metadata": {},
    "outputs": [],
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "id": "0959e1a4",
    "metadata": {},
    "outputs": [],
@@ -977,10 +977,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "76607a09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted kills: 14.7\n"
+     ]
+    }
+   ],
    "source": [
     "scored = score_kills_csv(\"test.csv\", out_path=\"test_scored.csv\")\n",
     "est = predict_kills(\"Xeppa\", \"Lotus\", \"MIBR\", 28)\n",
@@ -997,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "id": "601a5fb2",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 8,
    "id": "2adb803c",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1312,7 @@
       "ZETA    Pearl 106.01\n",
       "ZETA    Split  90.10\n",
       "{'Date': datetime.date(2025, 5, 15), 'TeamA': 'FNC', 'TeamB': 'TL', 'ClassA': 'bad', 'ClassB': 'good', 'BanA': 'Icebox', 'BanB': 'Haven', 'PickA': 'Lotus', 'PickB': 'Split'}\n",
-      "Expected rounds on Icebox (FNC vs TL as of 2025-05-15): 22.12\n"
+      "Expected rounds on Icebox (FNC vs TL as of 2025-05-15): 22.13\n"
      ]
     }
    ],
@@ -1314,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 9,
    "id": "f73abc20",
    "metadata": {},
    "outputs": [],
@@ -1384,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 13,
    "id": "21e80e32",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 17,
    "id": "c85312a1",
    "metadata": {},
    "outputs": [
@@ -1892,13 +1900,13 @@
        "24   Karmine Corp        31.184687  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "betting_df[0:25]\n"
+    "betting_df[0:25]"
    ]
   },
   {
@@ -1972,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 18,
    "id": "243f2424",
    "metadata": {},
    "outputs": [
@@ -2238,7 +2246,7 @@
        "74       woddy     Leviatán MAPS 1-2  MAPS 1-2 Kills  26.5              NaN"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
