--- a/aryan/elo_implementation.ipynb
+++ b/aryan/elo_implementation.ipynb
@@ -428,7 +428,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.7 ('m148')",
    "language": "python",
    "name": "python3"
   },
@@ -442,9 +442,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a2720be4e965180de30c1a654acfdd0c1b9dd1ebbf99285d20051f30c1cfe82a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
