tried to make it a py script
uploaded .py file of valorant script

--- a/anthony/valorant_final_model.ipynb
+++ b/anthony/valorant_final_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9ab77c82",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7ff512dd",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c0f9f86d",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "36e83293",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "43ff4cbe",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
       "ZETA    Pearl 106.01\n",
       "ZETA    Split  90.10\n",
       "{'Date': datetime.date(2025, 5, 15), 'TeamA': 'FNC', 'TeamB': 'TL', 'ClassA': 'bad', 'ClassB': 'good', 'BanA': 'Icebox', 'BanB': 'Haven', 'PickA': 'Lotus', 'PickB': 'Split'}\n",
-      "Expected rounds on Icebox (FNC vs TL as of 2025-05-15): 22.12\n"
+      "Expected rounds on Icebox (FNC vs TL as of 2025-05-15): 22.08\n"
      ]
     }
    ],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "596269b1",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "0c22ed0f",
    "metadata": {},
    "outputs": [
@@ -659,37 +659,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>karon</td>\n",
-       "      <td>gen.g esports</td>\n",
-       "      <td>fnatic</td>\n",
+       "      <td>johnqt</td>\n",
+       "      <td>Sentinels</td>\n",
+       "      <td>FNATIC</td>\n",
        "      <td>maps_1-2_kills</td>\n",
-       "      <td>28.835029</td>\n",
+       "      <td>27.528179</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  player_name           team opponent_team       stat_type  predicted_kills\n",
-       "0       karon  gen.g esports        fnatic  maps_1-2_kills        28.835029"
+       "  player_name       team opponent_team       stat_type  predicted_kills\n",
+       "0      johnqt  Sentinels        FNATIC  maps_1-2_kills        27.528179"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test = {\n",
-    "    \"player_name\": \"karon\",\n",
-    "    \"team\" : \"gen.g esports\",\n",
-    "    \"opponent_team\": \"fnatic\",\n",
+    "    \"player_name\": \"johnqt\",\n",
+    "    \"team\" : \"Sentinels\",\n",
+    "    \"opponent_team\": \"FNATIC\",\n",
     "    \"stat_type\": \"maps_1-2_kills\",\n",
     "}\n",
     "test = pd.DataFrame([test])\n",
     "test[\"predicted_kills\"] = test.apply(get_kill_prediction, axis=1)\n",
     "test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a843cb7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
